--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">KB2</string>
+    <string name="app_name" translatable="false">KB2</string>
     <string name="entity.menus.magician.item1">Buy workers</string>
     <string name="entity.menus.magician.item2">Buy magic force</string>
 </resources>
