--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="menus.country.item3">country3</string>
     <string name="menus.country.item4">country4</string>
     <string name="menus.country.item5">country5</string>
+    <string name="countries.country1">county1</string>
+    <string name="entity.mapNext.message">new country</string>
 </resources>
