--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -23,4 +23,7 @@
     <string name="entity.menus.city.workers.item2">Лесорубы</string>
     <string name="entity.menus.city.workers.item3">Землекопы</string>
     <string name="entity.menus.city.workers.item4">Камнетёсы</string>
+    <string name="entity.menus.magician.item3">Переместить на другой континент</string>
+    <string name="entity.menus.magician.item4">Спросить о заклинании</string>
+    <string name="entity.menus.magician.item5">Дать смерчь</string>
 </resources>
