--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="entity.menus.magician.item1">Купить работников</string>
-    <string name="entity.menus.magician.item2">Купить волшебную силу</string>
     <string name="entity.menus.goldchest.item1">Забрать золото(увеличить золотой запас)</string>
     <string name="entity.menus.goldchest.item2">Раздать воинам(увеличить авторитет)</string>
     <string name="menus.country.item1">Равнолесье</string>
@@ -23,9 +21,6 @@
     <string name="entity.menus.city.workers.item2">Лесорубы</string>
     <string name="entity.menus.city.workers.item3">Землекопы</string>
     <string name="entity.menus.city.workers.item4">Камнетёсы</string>
-    <string name="entity.menus.magician.item3">Переместить на другой континент</string>
-    <string name="entity.menus.magician.item4">Спросить о заклинании</string>
-    <string name="entity.menus.magician.item5">Дать смерчь</string>
     <string name="entity.harmfulMap.message1">Вы теряете работников</string>
     <string name="entity.harmfulMap.message2">Ваш корабль пошёл ко дну</string>
     <string name="entity.harmfulMap.message3">Ваша памяти стала вам изменять</string>
@@ -33,4 +28,21 @@
     <string name="entity.harmfulMap.message5">Ваш золотой запас уже не с вами</string>
     <string name="entity.goodMap.message1">Ваш авторитет в войсках растёт</string>
     <string name="entity.goodMap.message2">Найденная бумага очень нужна одному из Хозяев земель</string>
+    <string name="entity.guidePost.message1">Найди ритуальный камень.</string>
+    <string name="entity.guidePost.message2">Ку-ку.</string>
+    <string name="entity.guidePost.message3">Присядь, Рыцарь, Отдохни.</string>
+    <string name="entity.guidePost.message4">Нужно найти город</string>
+    <string name="entity.guidePost.message5">I am a fine statue!</string>
+    <string name="entity.guidePost.message6">Здешние города пусты.</string>
+    <string name="entity.guidePost.message7">Вы можете жить на проценты: АЛЛЕГРО быстрее инфляции.</string>
+    <string name="entity.guidePost.message8">Это гиблое место.</string>
+    <string name="entity.guidePost.message9">Отпусти животных из своего войска.</string>
+    <string name="entity.guidePost.message10">Здесь будет город-сад!</string>
+    <string name="entity.guidePost.message11">Здесь поиться Твой предшественник.</string>
+    <string name="entity.magician.menu.item1">Работники</string>
+    <string name="entity.magician.menu.item2">Волшебная сила</string>
+    <string name="entity.magician.menu.item3">Переместить на другой континент</string>
+    <string name="entity.magician.menu.item4">Спросить о заклинании</string>
+    <string name="entity.magician.menu.item5">Дать смерч</string>
+    <string name="entity.magician.menu.item6">---</string>
 </resources>
