--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -73,4 +73,5 @@
     <string name="mainMenu.resume">Продолжить</string>
     <string name="mainMenu.training">Тренировка</string>
     <string name="mainMenu.save_game">Сохранить игру</string>
+    <string name="mainMenu.save_game.saved">Cохранено</string>
 </resources>
