--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,4 +75,5 @@
     <string name="mainMenu.exit">Exit</string>
     <string name="mainMenu.save_game">Save game</string>
     <string name="mainMenu.save_game.saved">Saved</string>
+    <string name="entity.capitan.noArmy">Без войска драться? Насмешил!</string>
 </resources>
