--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,5 +75,9 @@
     <string name="mainMenu.exit">Exit</string>
     <string name="mainMenu.save_game">Save game</string>
     <string name="mainMenu.save_game.saved">Saved</string>
-    <string name="entity.capitan.noArmy">Без войска драться? Насмешил!</string>
+    <string name="entity.captain.noArmy">Без войска драться? Насмешил!</string>
+    <string name="workers.item1">Плотники</string>
+    <string name="workers.item2">Лесорубы</string>
+    <string name="workers.item3">Землекопы</string>
+    <string name="workers.item4">Камнетёсы</string>
 </resources>
