--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,4 +87,6 @@
     <string name="magic.hiking_magic5">Магия5</string>
     <string name="magic.hiking_magic6">Магия6</string>
     <string name="magic.hiking_magic7">Магия7</string>
+    <string name="battle.finish.win">Вы победили</string>
+    <string name="battle.finish.fail">Вы проиграли</string>
 </resources>
