Translate with params and text wrap in messages

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -86,6 +86,6 @@
     <string name="magic.hiking_magic5">Дать армию</string>
     <string name="magic.hiking_magic6">Квариавторитет</string>
     <string name="magic.hiking_magic7">Дать волшебство</string>
-    <string name="battle.finish.win">Вы победили</string>
-    <string name="battle.finish.fail">Вы проиграли</string>
+    <string name="battle.finish.win">Вы победили, вам досталось золота #{?} и ваш авторитет возрос на #{?}</string>
+    <string name="battle.finish.fail">Вы проиграли, ваш авторитет уменьшился на #{?} и противник забросил вас неизвестно куда</string>
 </resources>
