--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="entity.menus.goldchest.item1">Забрать золото(увеличить золотой запас)</string>
-    <string name="entity.menus.goldchest.item2">Раздать воинам(увеличить авторитет)</string>
+    <string name="entity.menus.goldchest.item1">Забрать золото(золотой запас +#{?})</string>
+    <string name="entity.menus.goldchest.item2">Раздать воинам(авторитет +#{?})</string>
     <string name="menus.country.item1">Равнолесье</string>
     <string name="menus.country.item2">Заболотие</string>
     <string name="menus.country.item3">Тайгания</string>
