Start player params

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -26,8 +26,15 @@
     <string name="entity.harmfulMap.message3">Ваша памяти стала вам изменять</string>
     <string name="entity.harmfulMap.message4">Вы теряете армию</string>
     <string name="entity.harmfulMap.message5">Ваш золотой запас уже не с вами</string>
+    <string name="entity.harmfulMap.message6">*У хозяина земли выросли болишие уши</string>
+    <string name="entity.harmfulMap.message7">*Заклинание перенесло вас в другое место</string>
     <string name="entity.goodMap.message1">Ваш авторитет в войсках растёт</string>
     <string name="entity.goodMap.message2">Найденная бумага очень нужна одному из Хозяев земель</string>
+    <string name="entity.goodMap.message3">*Вы нашли карту для вызова волшебника</string>
+    <string name="entity.goodMap.message4">*Контрактные замки данной земли расположены</string>
+    <string name="entity.goodMap.message5">*Ваш золотой запас растёт</string>
+    <string name="entity.goodMap.message6">*Ваши войно становятся более умелыми</string>
+    <string name="entity.goodMap.message7">Ценная бумага, нужна одному из хозяев земель</string>
     <string name="entity.guidePost.message1">Найди ритуальный камень.</string>
     <string name="entity.guidePost.message2">Ку-ку.</string>
     <string name="entity.guidePost.message3">Присядь, Рыцарь, Отдохни.</string>
@@ -43,8 +50,13 @@
     <string name="entity.magician.menu.item2">Волшебная сила</string>
     <string name="entity.magician.menu.item3">Переместить на другой континент</string>
     <string name="entity.magician.menu.item4">Спросить о заклинании</string>
+    <string name="entity.magician.menu.item4a">Где находится замок по контракту</string>
     <string name="entity.magician.menu.item5">Дать смерч</string>
-    <string name="entity.magician.menu.item6">---</string>
+    <string name="entity.magician.menu.item6a">Часть древней карты</string>
+    <string name="entity.magician.menu.item6b">Изменить волшебства</string>
+    <string name="entity.magician.menu.item6c">Обновить работников</string>
+    <string name="entity.magician.menu.item6d">Заселить воинов</string>
+    <string name="entity.magician.menu.item6e">Усилить воинов</string>
     <string name="entity.goldChest.messages.salary">Недельная плата+</string>
     <string name="entity.goldChest.messages.magickUp">Макс кол-во волшебств +1</string>
     <string name="army.names.peasant">Крестьяне</string>
