Buy magic in city

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,34 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name" translatable="false">KB2</string>
-    <string name="entity.menus.goldchest.item1">get gold</string>
-    <string name="entity.menus.goldchest.item2">get authority</string>
-    <string name="menus.country.item1">country1</string>
-    <string name="menus.country.item2">country2</string>
-    <string name="menus.country.item3">country3</string>
-    <string name="menus.country.item4">country4</string>
-    <string name="menus.country.item5">country5</string>
-    <string name="countries.country1">county1</string>
-    <string name="entity.mapNext.message">new country</string>
-    <string name="entity.menus.city.item1">contract</string>
-    <string name="entity.menus.city.item2">Купить корабль</string>
-    <string name="entity.menus.city.item3">Спросить о замке</string>
-    <string name="entity.menus.city.item4">%волшебство%</string>
-    <string name="entity.menus.city.item5">Купить стенобитное орудие</string>
-    <string name="entity.menus.city.item6">Работники</string>
+    <string name="entity.menus.goldchest.item1">Забрать золото(золотой запас +#{?})</string>
+    <string name="entity.menus.goldchest.item2">Раздать воинам(авторитет +#{?})</string>
+    <string name="menus.country.item1">Равнолесье</string>
+    <string name="menus.country.item2">Заболотие</string>
+    <string name="menus.country.item3">Тайгания</string>
+    <string name="menus.country.item4">Альпия</string>
+    <string name="menus.country.item5">Сахария</string>
+    <string name="countries.country1">Равнолесье</string>
+    <string name="entity.mapNext.message">Вы нашли карту до новой страны</string>
+    <string name="entity.menus.city.item1">Заключить контракт</string>
     <string name="entity.menus.city.item7">Товар</string>
+    <string name="entity.menus.city.item6">Работники</string>
+    <string name="entity.menus.city.item5">Купить стенобитное орудие</string>
+    <string name="entity.menus.city.item4">%волшебство%</string>
+    <string name="entity.menus.city.item3">Спросить о замке</string>
+    <string name="entity.menus.city.item2">Купить корабль</string>
     <string name="entity.menus.city.item2a">Продать корабль</string>
-    <string name="entity.menus.city.workers.item1">a</string>
-    <string name="entity.menus.city.workers.item2">b</string>
-    <string name="entity.menus.city.workers.item3">c</string>
-    <string name="entity.menus.city.workers.item4">d</string>
+    <string name="entity.menus.city.workers.item1">Плотники</string>
+    <string name="entity.menus.city.workers.item2">Лесорубы</string>
+    <string name="entity.menus.city.workers.item3">Землекопы</string>
+    <string name="entity.menus.city.workers.item4">Камнетёсы</string>
     <string name="entity.harmfulMap.message1">Вы теряете работников</string>
     <string name="entity.harmfulMap.message2">Ваш корабль пошёл ко дну</string>
     <string name="entity.harmfulMap.message3">Ваша памяти стала вам изменять</string>
     <string name="entity.harmfulMap.message4">Вы теряете армию</string>
     <string name="entity.harmfulMap.message5">Ваш золотой запас уже не с вами</string>
+    <string name="entity.harmfulMap.message6">*У хозяина земли выросли болишие уши</string>
+    <string name="entity.harmfulMap.message7">*Заклинание перенесло вас в другое место</string>
     <string name="entity.goodMap.message1">Ваш авторитет в войсках растёт</string>
     <string name="entity.goodMap.message2">Найденная бумага очень нужна одному из Хозяев земель</string>
+    <string name="entity.goodMap.message3">*Вы нашли карту для вызова волшебника</string>
+    <string name="entity.goodMap.message4">*Контрактные замки данной земли расположены</string>
+    <string name="entity.goodMap.message5">*Ваш золотой запас растёт</string>
+    <string name="entity.goodMap.message6">*Ваши войно становятся более умелыми</string>
+    <string name="entity.goodMap.message7">Ценная бумага, нужна одному из хозяев земель</string>
     <string name="entity.guidePost.message1">Найди ритуальный камень.</string>
     <string name="entity.guidePost.message2">Ку-ку.</string>
     <string name="entity.guidePost.message3">Присядь, Рыцарь, Отдохни.</string>
@@ -44,10 +51,15 @@
     <string name="entity.magician.menu.item2">Волшебная сила</string>
     <string name="entity.magician.menu.item3">Переместить на другой континент</string>
     <string name="entity.magician.menu.item4">Спросить о заклинании</string>
+    <string name="entity.magician.menu.item4a">Где находится замок по контракту</string>
     <string name="entity.magician.menu.item5">Дать смерч</string>
-    <string name="entity.magician.menu.item6">---</string>
-    <string name="entity.goldChest.messages.salary">salary</string>
-    <string name="entity.goldChest.messages.magickUp">magickUp</string>
+    <string name="entity.magician.menu.item6a">Часть древней карты</string>
+    <string name="entity.magician.menu.item6b">Изменить волшебства</string>
+    <string name="entity.magician.menu.item6c">Обновить работников</string>
+    <string name="entity.magician.menu.item6d">Заселить воинов</string>
+    <string name="entity.magician.menu.item6e">Усилить воинов</string>
+    <string name="entity.goldChest.messages.salary">Недельная плата+</string>
+    <string name="entity.goldChest.messages.magickUp">Макс кол-во волшебств +1</string>
     <string name="army.names.peasant">Крестьяне</string>
     <string name="army.names.aborigine">Туземцы</string>
     <string name="army.names.boar">Кабаны</string>
@@ -76,33 +88,54 @@
     <string name="player.attrs.tornadoCount">Кол-во СМЕРЧЕЙ</string>
     <string name="player.attrs.ancientMapCount">Кол-во частей древней карты</string>
     <string name="player.attrs.weeks">Недель осталось</string>
-    <string name="mainMenu.resume">Resume</string>
-    <string name="mainMenu.new_game">New game</string>
-    <string name="mainMenu.training">Training</string>
-    <string name="mainMenu.load_game">Load game</string>
-    <string name="mainMenu.exit">Exit</string>
-    <string name="mainMenu.save_game">Save game</string>
-    <string name="mainMenu.save_game.saved">Saved</string>
-    <string name="entity.captain.noArmy">Без войска драться? Насмешил!</string>
+    <string name="mainMenu.exit">Выход</string>
+    <string name="mainMenu.load_game">Загрузить игру</string>
+    <string name="mainMenu.new_game">Новая игра</string>
+    <string name="mainMenu.resume">Продолжить</string>
+    <string name="mainMenu.training">Тренировка</string>
+    <string name="mainMenu.save_game">Сохранить игру</string>
+    <string name="mainMenu.save_game.saved">Cохранено</string>
     <string name="workers.item1">Плотники</string>
     <string name="workers.item2">Лесорубы</string>
     <string name="workers.item3">Землекопы</string>
     <string name="workers.item4">Камнетёсы</string>
-    <string name="magic.hiking_magic1">Магия1</string>
-    <string name="magic.hiking_magic2">Магия2</string>
-    <string name="magic.hiking_magic3">Магия3</string>
-    <string name="magic.hiking_magic4">Магия4</string>
-    <string name="magic.hiking_magic5">Магия5</string>
-    <string name="magic.hiking_magic6">Магия6</string>
-    <string name="magic.hiking_magic7">Магия7</string>
-    <string name="battle.finish.win">Вы победили</string>
-    <string name="battle.finish.fail">Вы проиграли</string>
+    <string name="magic.hiking_magic1">Остановка времени</string>
+    <string name="magic.hiking_magic2">СМИ-И-ИРНО</string>
+    <string name="magic.hiking_magic3">Переход к замку</string>
+    <string name="magic.hiking_magic4">Переход к городу</string>
+    <string name="magic.hiking_magic5">Дать армию</string>
+    <string name="magic.hiking_magic6">Квариавторитет</string>
+    <string name="magic.hiking_magic7">Дать волшебство</string>
+    <string name="magic.battle_magic1">Телепорт</string>
+    <string name="magic.battle_magic2">Размножение</string>
+    <string name="magic.battle_magic3">Шаровая молния</string>
+    <string name="magic.battle_magic4">Мороз</string>
+    <string name="magic.battle_magic5">Дубинка</string>
+    <string name="magic.battle_magic6">Воскрешение</string>
+    <string name="magic.battle_magic7">Инфекция</string>
+    <string name="battle.begin.castle">Замок</string>
+    <string name="battle.begin.noArmy">Без войска драться? Насмешил!</string>
+    <string name="battle.begin.ask">Будешь драться?</string>
+    <string name="battle.begin.ask.yes">Да</string>
+    <string name="battle.begin.ask.no">Нет</string>
+    <string name="battle.finish.win">Вы победили, вам досталось золота #{?} и ваш авторитет возрос на #{?}</string>
+    <string name="battle.finish.fail">Вы проиграли, ваш авторитет уменьшился на #{?} и противник забросил вас неизвестно куда</string>
     <string name="messages.weekEnd.title">ФИНАНСОВЫЙ ОТЧЁТ ПРОШЛОЙ НЕДЕЛИ</string>
     <string name="messages.weekEnd.money">Имеется всего</string>
     <string name="messages.weekEnd.salary">Недельная прибавка</string>
     <string name="messages.weekEnd.armySalary">Расходы на армию</string>
-    <string name="messages.weekEnd.armyRefresh">#{?} активизируются</string>
-    <string name="messages.weekEnd.armyRefresh2">Наступает</string>
-    <string name="messages.weekEnd.armyRefresh3">Все их</string>
-    <string name="messages.weekEnd.cityRefresh">Город #{?} заполнился работниками</string>
+    <string name="messages.weekEnd.armyRefresh">#{?} активизируются.</string>
+    <string name="messages.weekEnd.armyRefresh2">Наступает благоприятный период по расположению звёзд для этих войнов.</string>
+    <string name="messages.weekEnd.armyRefresh3">Все их жилища перенаселяются.</string>
+    <string name="messages.weekEnd.cityRefresh">Город #{?} заполнился работниками.</string>
+    <string name="city.names.name1">БАВАРИЯ</string>
+    <string name="city.names.name2">БОРМАШОВ</string>
+    <string name="city.names.name3">ГНИЛОВКА</string>
+    <string name="city.names.name4">ГУРЬЕВ</string>
+    <string name="city.names.name5">ЕЛОВОЕ</string>
+    <string name="castle.names.name1">AKКРА</string>
+    <string name="castle.names.name2">БАМАКО</string>
+    <string name="castle.names.name3">БИСАУ</string>
+    <string name="castle.names.name4">ГЛАЗГО</string>
+    <string name="castle.names.name5">ГРИНВИЧ</string>
 </resources>
